<resources>
    <string name="app_name">Clase3108 DSM</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="HolaMundo">Hola Mundo desde el archivo string.xml</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ThirdFragment">Third Fragment</string>
    <string name="FirstFragment">First Fragment</string>
    <string name="SecondFragment">Second Fragment</string>

    <string name="number1">Number 1</string>
    <string name="number2">Number 2</string>
    <string name="calculate">Calcular</string>
    <string name="resultado">Resultado</string>
    <string name="suma">Sumar</string>
    <string name="restar">Restar</string>
    <string name="dividir">Dividir</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="sumar">Sumar</string>
    <string name="resta">Restar</string>
    <string name="dividirr">Dividir</string>
    <string name="multiplicarr">Multiplicar</string>
</resources>