<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/button_first"
        android:layout_width="128dp"
        android:layout_height="44dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="26dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calcular"
        app:layout_constraintTop_toBottomOf="@+id/restarCb"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/calcular"
        android:layout_width="142dp"
        android:layout_height="66dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="24dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_first"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultado" />

    <RadioGroup
        android:id="@+id/radGroup"
        android:layout_width="155dp"
        android:layout_height="219dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="98dp"
        app:layout_constraintBottom_toTopOf="@+id/resultado"
        app:layout_constraintEnd_toStartOf="@+id/restarCb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number1">

        <RadioButton
            android:id="@+id/sumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suma" />

        <RadioButton
            android:id="@+id/restar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restar" />

        <RadioButton
            android:id="@+id/multiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiplicar" />

        <RadioButton
            android:id="@+id/dividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dividir" />
    </RadioGroup>

    <EditText
        android:id="@+id/resultado"
        android:layout_width="359dp"
        android:layout_height="144dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="39dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/resultado"
        android:inputType="textMultiLine|textPersonName"
        android:minHeight="48dp"
        android:singleLine="false"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radGroup" />

    <CheckBox
        android:id="@+id/sumarCb"
        android:layout_width="149dp"
        android:layout_height="41dp"
        android:layout_marginBottom="12dp"
        android:text="@string/sumar"
        app:layout_constraintBottom_toTopOf="@+id/dividirCb"
        app:layout_constraintStart_toStartOf="@+id/dividirCb"
        app:layout_constraintTop_toBottomOf="@+id/number2"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/multiplicarCb"
        android:layout_width="153dp"
        android:layout_height="43dp"
        android:layout_marginBottom="13dp"
        android:text="@string/multiplicarr"
        app:layout_constraintBottom_toTopOf="@+id/restarCb"
        app:layout_constraintStart_toStartOf="@+id/restarCb"
        app:layout_constraintTop_toBottomOf="@+id/dividirCb"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/restarCb"
        android:layout_width="158dp"
        android:layout_height="47dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="313dp"
        android:text="@string/resta"
        app:layout_constraintBottom_toTopOf="@+id/button_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radGroup"
        app:layout_constraintTop_toBottomOf="@+id/multiplicarCb"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/dividirCb"
        android:layout_width="152dp"
        android:layout_height="48dp"
        android:layout_marginBottom="7dp"
        android:text="@string/dividirr"
        app:layout_constraintBottom_toTopOf="@+id/multiplicarCb"
        app:layout_constraintStart_toStartOf="@+id/multiplicarCb"
        app:layout_constraintTop_toBottomOf="@+id/sumarCb"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/number1"
        android:layout_width="145dp"
        android:layout_height="60dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="62dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/number1"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/radGroup"
        app:layout_constraintEnd_toStartOf="@+id/number2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/number2"
        android:layout_width="150dp"
        android:layout_height="72dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="62dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/number2"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/sumarCb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/number1"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>