<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/secondFragment"
        android:layout_width="184dp"
        android:layout_height="0dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="335dp"
        android:text="@string/SecondFragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstFragment">

    </Button>

    <Button
        android:id="@+id/firstFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="261dp"
        android:layout_marginBottom="23dp"
        android:text="@string/FirstFragment"
        app:layout_constraintBottom_toTopOf="@+id/secondFragment"
        app:layout_constraintEnd_toEndOf="@+id/secondFragment"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/secondFragment"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>